Fix nav link icons on mobile (#31)

--- a/src/scss/components/_introduction.scss
+++ b/src/scss/components/_introduction.scss
@@ -19,6 +19,10 @@
     margin-top: 25px;
     margin-left: auto;
 
+    .speech-bubble {
+        display: none;
+    }
+
     img {
         width: 85%;
         border-radius: 50%;
@@ -73,7 +77,6 @@
             position: absolute;
             top: 30%;
             left: 70%;
-            display: none;
             place-items: center;
             margin: 0;
             min-width: 40px;
